Fix mobile transport buttons: prevent native browser overrides, maintain custom styling on iOS/Android

--- a/src/components/AudioPlayer.css
+++ b/src/components/AudioPlayer.css
@@ -131,6 +131,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .control-btn:hover {
@@ -154,6 +161,13 @@
   font-size: 4.5rem;
   background: #FF5F1F;
   color: black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .play-btn:hover {
@@ -283,23 +297,47 @@
   
   .controls {
     flex-direction: row;
-    justify-content: space-between;
-    gap: 8px;
+    justify-content: center;
+    gap: 15px;
     flex-wrap: nowrap;
   }
   
   .control-btn {
-    width: calc(25% - 6px);
-    height: 80px;
-    font-size: 2rem;
+    width: 100px;
+    height: 100px;
+    font-size: 2.5rem;
     min-width: 0;
+    flex-shrink: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    background: #FF5F1F;
+    color: black;
+    font-family: inherit;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
   }
   
   .play-btn {
-    width: calc(25% - 6px);
-    height: 80px;
-    font-size: 2rem;
+    width: 100px;
+    height: 100px;
+    font-size: 2.5rem;
     min-width: 0;
+    flex-shrink: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    background: #FF5F1F;
+    color: black;
+    font-family: inherit;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
   }
   
   .show-title {
